[package]
name = "tars_db"
version = "2.0.0"
edition = "2021"
description = "TarsDB Sense: High-performance Associative BI Engine (WASM)"
authors = ["Prof. Dr. Tars All"]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# --- 1. TEMEL ---
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Window", "Document", "Element"] }

# --- 2. VERİ ---
roaring = { version = "0.10", features = ["serde"] }
# ahash SİLİNDİ - Yerine std::collections::HashMap kullanacağız.
csv = "1.3"

# --- 3. TİP ALGILAMA ---
regex = "1.10"
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }

# --- 4. SERİLEŞTİRME ---
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# --- 5. RASTGELELİK ---
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
# getrandom 0.2'ye kilitliyoruz
getrandom = { version = "=0.2.14", features = ["js"] }

# --- 6. BELLEK ---
wee_alloc = { version = "0.4", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

# Target Override
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "=0.2.14", features = ["js"] }

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1